# WAD_Python

./: .gitignore  CHANGES.txt  COPYRIGHT_NOTICE.txt  GettingStarted.txt  INSTALL.txt  README.md  pywadplugin.py  run_module.py
Documentation/: Plugin_development.CT.CT_Catphan_500.rst  Plugin_development.Fluoro.Pehamed.rst  Plugin_development.Fluoro.rst  Plugin_development.MRI.MRI_PIQTparser.rst  Plugin_development.MRI.rst  Plugin_development.PET.PET_EARL.rst  Plugin_development.PET.rst  Plugin_development.rst  Plugins.Bucky.Bucky_BEAM.rst  Plugins.Bucky.Bucky_PEHAMED_Wellhofer.rst  Plugins.Dicom.FileLocation.rst  Plugins.Dicom.Headers.rst  Plugins.Fluoro.PinCushion.rst  Plugins.Fluoro.rst  Plugins.MG.rst  Plugins.MRI.MRI_PIQT.rst  Plugins.MRI.rst  Plugins.Mammo.Mammo_CDMam.rst  Plugins.Mammo.Mammo_Flatfield.rst  Plugins.Mammo.rst  Plugins.NM.NM_SPECT_COR.rst  Plugins.NM.rst  Plugins.OCRtool.rst  Plugins.PET.PhilipsPETQCparser.rst  Plugins.PET.SiemensPETQCparser.rst  Plugins.PET.rst  Plugins.US.US_AirReverberations.rst  Plugins.US.rst  Plugins.rst  README.txt  Tools.Input2DCM.rst  Tools.PET_Siemens_send2wad.rst  Tools.PluginTesting.rst  Tools.dbTools.rst  Tools.rst  conf.py  index.rst  introduction.txt  modules.rst  pyWADLib.rst  (+17 more)
Plugin_development/Bucky/CcodeNormi13/20150324_WADAnalysisModule/: CMakeLists.txt  Doxyfile
Plugin_development/Bucky/CcodeNormi13/20150324_WADAnalysisModule/app/: CMakeLists.txt
Plugin_development/Bucky/CcodeNormi13/20150324_WADAnalysisModule/app/BuckyAnalysisModule/: CMakeLists.txt  WADBuckyConfigFile.xml  input.xml  main.cxx  main.h  wadBuckyConfigFile.cxx  wadBuckyConfigFile.h  wadBuckyPhantom.cxx  wadBuckyPhantom.h
Plugin_development/Bucky/CcodeNormi13/20150324_WADAnalysisModule/app/ExampleAnalysisModule/: CMakeLists.txt  GPL_header.txt  WADConfigFile.xml  addLicenseToSource  input.xml  main.cxx  main.h  wadExampleConfigFile.cxx  wadExampleConfigFile.h  wadExamplePhantom.cxx  wadExamplePhantom.h
Plugin_development/Bucky/CcodeNormi13/20150324_WADAnalysisModule/app/RadiologyAnalysisModule/: CMakeLists.txt  WADConfigFile.xml  main.cxx  main.h  wadRadiologyConfigFile.cxx  wadRadiologyConfigFile.h  wadRadiologyPhantom.cxx  wadRadiologyPhantom.h
Plugin_development/Bucky/CcodeNormi13/20150324_WADAnalysisModule/lib/: CMakeLists.txt  wad.h  wadConfigFile.h  wadInputFile.cxx  wadInputFile.h  wadPhantom.h  wadResultFile.cxx  wadResultFile.h
Plugin_development/Generic/: generic.py
Plugin_development/TestPlugin/: myplugin.py
Plugin_development/Washer_Getinge/: QC_getinge.py
Plugins/Fluoro/: pincushionWAD.py
Plugins/OCRtool/: ocr.py
Testing/: .gitignore  README.txt  generic_config.xml
Testing/Input2DCM/: input2dicom_series.xml
Testing/PackageTesting/: config.xml  input.xml
Testing/TestPlugin/: dicom.dcm
Tools/: pywad2zip.py
pyWAD/: base.py  plugindata.py  pluginresults.py  xml_parser.py  xml_result_generator.py
pyWADLib/: dumppdf.py  findmax.py  pydicom_series.py  wadwrapper_lib.py
pylinac/: __init__.py  cbct.py  const.py
(+729 files in other folders)
